# BenchGen

./: .gitignore  .gitmodules  README.md
Bench-Metrics/: README.md
Bench-Metrics/BenchGen-MilePost/: mergeTable.py  mp-metrics.csv  run.py
Bench-Metrics/BenchGen-Perf/: runPerf.py
Bench-Metrics/BenchGenGrowthExample/: cpu_cycles_table.csv  main_table.csv  output_1.c  output_11.c  output_13.c  output_3.c  output_5.c  output_7.c  output_9.c  sizes_table.csv  table.csv
Bench-Metrics/CSmith-Metrics/: results_large.csv  sizes_o0.csv  sizes_o1.csv  sizes_o2.csv  sizes_o3.csv
Bench-Metrics/CSmith-Size/: runPerf.py  sizes.csv
Bench-Metrics/Compilers-Comparison/: measure.py
Bench-Metrics/Experiment_Results/: compiler_comparison.csv  experiment_mp.csv
Bench-Metrics/Perf-Generic/: README.md  runPerf.py
Bench-Metrics/SPEC-Perf/: README.md
Bench-Metrics/SPEC-Size/: getSize.py
Bench-Metrics/Spec-size/: sizes.csv
Compilers-Experiment/: README.md
docs/: doxygen.conf
docs/html/: CodeGeneratorDriver_8cpp.html  CodeGeneratorDriver_8cpp__incl.dot  Makefile.html  README_8md.html  annotated.html  ast_8cpp.html  ast_8cpp__incl.dot  ast_8h.html  ast_8h__dep__incl.dot  ast_8h__incl.dot  ast_8h_source.html  classArray-members.html  classArray.html  classArray__inherit__graph.dot  classCall-members.html  classCall.html  classCall__coll__graph.dot  classCodeElse-members.html  classCodeElse.html  classCodeElse__inherit__graph.dot  classContains-members.html  classContains.html  classContains__inherit__graph.dot  (+186 more)
src/milepost/lib/: CGAnalyzer.cpp  CMakeLists.txt
(+3130 files in other folders)
